--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1.34.0", features = ["full"] }
 protocol = { path = "../protocol" }
-redis = { version = "0.23.3", features = ["aio"] }
+redis = { version = "0.23.3", features = ["tokio-comp", "aio"] }
